// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification Component should render notification component with status error 1`] = `
<Styled(Col)
  colSize={
    Object {
      "large": 10,
      "medium": 8,
      "small": 6,
    }
  }
>
  <Styled(BodyCopy)
    className="notification"
    color="white"
    component="span"
    fontFamily="primary"
    fontSize="fs12"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  />
</Styled(Col)>
`;

exports[`Notification Component should render notification component with status success 1`] = `
<Styled(Col)
  colSize={
    Object {
      "large": 10,
      "medium": 8,
      "small": 6,
    }
  }
>
  <img
    alt="success icon"
    src="/static/images/done.svg"
  />
  <Styled(BodyCopy)
    className="notification"
    color="darkGray"
    component="span"
    fontFamily="primary"
    fontSize="fs12"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  />
</Styled(Col)>
`;
